# kyria-kb2040

./: Cargo.toml  Embed.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml
examples/: core1_emulator.rs
mock_defmt/: Cargo.toml
mock_defmt/src/: lib.rs
src/: anim.rs  core1.rs  cross_talk.rs  event_handler.rs  fmt.rs  layout.rs  leds.rs  lib.rs  log.rs  main.rs  media.rs  mouse.rs  pimorino_trackball.rs  pins.rs  pong.rs  rotary.rs  ws2812.rs
src/anim/: anim_tests.rs
src/cross_talk/: cross_talk_tests.rs
src/event_handler/: event_handler_tests.rs
src/layout/: layout_tests.rs
src/media/: media_tests.rs
src/rotary/: rotary_tests.rs
