[package]
authors = ["Paul Daniel Faria"]
edition = "2021"
readme = "README.md"
name = "kyria-kb2040"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = { version = "0.3.1", optional = true }
defmt-rtt = { version = "0.3.2", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }

usb-device= "0.2.8"
usbd-serial = "0.1.1"
# usbd-hid = "0.6.0"
# This revision has consumer page support.
usbd-hid = { git = "https://github.com/twitchyliquid64/usbd-hid", rev = "71632dea0209afadc1dfb1b401d45376c32ba511" }

# Led support
smart-leds = "0.3.0"
# This revision supports rp2040 version 0.4.0.
# ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "b126e70c23e192896caa38aa1a54d4877745fb1f" }
nb = "1.0.0"
pio = "0.2.0"

# This revision supports boot2 by default.
adafruit-kb2040 = { version = "0.6.0", optional = true }
sparkfun-pro-micro-rp2040 = { version = "0.6.0", optional = true }
rp-pico = { version = "0.7.0", optional = true }

# This revision supports hold tap, easier to use.
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "24bd53f850bb5f07b1eee36fe3ac75082d439c10" }
fugit = "0.3.6"

ssd1306 = "0.8.0"
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"
rotary-encoder-hal = { version = "0.5.0", features = ["table-decoder"] }
arraydeque = { version = "0.5.1", default-features = false }

[dev-dependencies]
assert_matches = "1.3.0"
test-case = "3.1.0"

[features]
"default" = ["kb2040"]
"kb2040" = ["adafruit-kb2040", "panic-halt"]
"sf2040" = ["sparkfun-pro-micro-rp2040", "panic-halt"]
"pico" = ["rp-pico", "defmt", "panic-probe"]
"defmt" = ["dep:defmt", "defmt-rtt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
rp2040-hal = { git = "https://github.com/nashenas88/rp-hal", branch = "i2c-irq" }
